force-app/main/default/objects/APT_ASIC_Report__c/APT_ASIC_Report__c.object-meta.xml
<CustomObject>
    <label>ASIC Report</label>
    <nameField>
        <displayFormat>ASIC-{0000}</displayFormat>
        <label>ASIC Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASIC Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>