force-app/main/default/objects/APT_ASIC_Report__c/fields/APT_ABN__c.field-meta.xml
<CustomField>
    <fullName>APT_ABN__c</fullName>
    <label>ABN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>