force-app/main/default/objects/APT_ASIC_Report__c/fields/APT_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>APT_Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>