force-app/main/default/objects/APT_ASIC_Report__c/fields/APT_Postcode__c.field-meta.xml
<CustomField>
    <fullName>APT_Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>