force-app/main/default/objects/APT_ASIC_Report__c/fields/APT_State__c.field-meta.xml
<CustomField>
    <fullName>APT_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>