force-app/main/default/objects/APT_ASIC_Report__c/fields/APT_Status__c.field-meta.xml
<CustomField>
    <fullName>APT_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>